objects/Ranking__c.object
<CustomObject>
    <fields>
        <fullName>Attribute_Name__c</fullName>
        <label>Attribute Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ANNUAL REVENUE</fullName>
                </value>
                <value>
                    <fullName>BUDGET</fullName>
                </value>
                <value>
                    <fullName>BUYER STAGE</fullName>
                </value>
                <value>
                    <fullName>CISCO ARCHITECTURE</fullName>
                </value>
                <value>
                    <fullName>CONTACT DEPARTMENT</fullName>
                </value>
                <value>
                    <fullName>CONTACT ENGAGEMENT</fullName>
                </value>
                <value>
                    <fullName>CONTACT TITLE-POSITION</fullName>
                </value>
                <value>
                    <fullName>ELOQUA LEAD SCORE</fullName>
                </value>
                <value>
                    <fullName>ELOQUA LEAD SOURCE</fullName>
                </value>
                <value>
                    <fullName>GLOBAL ELOQUA</fullName>
                </value>
                <value>
                    <fullName>HAS PURCHASED CISCO BEFORE</fullName>
                </value>
                <value>
                    <fullName>INBOUND PROGRAM</fullName>
                </value>
                <value>
                    <fullName>JOB ROLE</fullName>
                </value>
                <value>
                    <fullName>LEAD CATEGORY</fullName>
                </value>
                <value>
                    <fullName>LEAD SOURCE</fullName>
                </value>
                <value>
                    <fullName>LEAD TYPE</fullName>
                </value>
                <value>
                    <fullName>MAIN PRODUCT</fullName>
                </value>
                <value>
                    <fullName>MEDIUM TYPE</fullName>
                </value>
                <value>
                    <fullName>NUMBER OF EMPLOYEES</fullName>
                </value>
                <value>
                    <fullName>OFFER TYPE</fullName>
                </value>
                <value>
                    <fullName>PRODUCT VALUE</fullName>
                </value>
                <value>
                    <fullName>PROJECT FLAG</fullName>
                </value>
                <value>
                    <fullName>PURCHASING ROLE</fullName>
                </value>
                <value>
                    <fullName>SAVM SEGMENT</fullName>
                </value>
                <value>
                    <fullName>SERVICES VALUE</fullName>
                </value>
                <value>
                    <fullName>SOURCE SYSTEM NAME</fullName>
                </value>
                <value>
                    <fullName>TIMEFRAME</fullName>
                </value>
                <value>
                    <fullName>TOTAL VALUE</fullName>
                </value>
                <value>
                    <fullName>VERTICAL MARKET</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attribute_Ranking__c</fullName>
        <label>Attribute Ranking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attribute_Value__c</fullName>
        <label>Attribute Value</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Attribute_Name__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>$0 - $999</fullName>
                </value>
                <value>
                    <fullName>$0-$999</fullName>
                </value>
                <value>
                    <fullName>$1,000,000+</fullName>
                </value>
                <value>
                    <fullName>$1-$2,499</fullName>
                </value>
                <value>
                    <fullName>$10,000-$24,999</fullName>
                </value>
                <value>
                    <fullName>$10,000-$49,999</fullName>
                </value>
                <value>
                    <fullName>$100,000-$199,999</fullName>
                </value>
                <value>
                    <fullName>$100,000-$250,000</fullName>
                </value>
                <value>
                    <fullName>$100,000-$499,999</fullName>
                </value>
                <value>
                    <fullName>$100,000-$999,999</fullName>
                </value>
                <value>
                    <fullName>$100,000+</fullName>
                </value>
                <value>
                    <fullName>$100+ Million</fullName>
                </value>
                <value>
                    <fullName>$1000 - $4999</fullName>
                </value>
                <value>
                    <fullName>$101-350 million</fullName>
                </value>
                <value>
                    <fullName>$10M-$49.9M</fullName>
                </value>
                <value>
                    <fullName>$10million+</fullName>
                </value>
                <value>
                    <fullName>$11-50 million</fullName>
                </value>
                <value>
                    <fullName>$1-2 million</fullName>
                </value>
                <value>
                    <fullName>$15,000 - $24,999</fullName>
                </value>
                <value>
                    <fullName>$15,000-$24,999</fullName>
                </value>
                <value>
                    <fullName>$1M-$4.9M</fullName>
                </value>
                <value>
                    <fullName>$2,500-$4,999</fullName>
                </value>
                <value>
                    <fullName>$200,000-$499,999</fullName>
                </value>
                <value>
                    <fullName>$2-3 million</fullName>
                </value>
                <value>
                    <fullName>$25,000 - $49,999</fullName>
                </value>
                <value>
                    <fullName>$25,000-$49,999</fullName>
                </value>
                <value>
                    <fullName>$250,000-$500,000</fullName>
                </value>
                <value>
                    <fullName>$351-500 million</fullName>
                </value>
                <value>
                    <fullName>$3-5 million</fullName>
                </value>
                <value>
                    <fullName>$5,000-$9,999</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Theatre__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMERICAS</fullName>
                </value>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>EMEAR</fullName>
                </value>
                <value>
                    <fullName>GREATER CHINA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Attribute_Ranking__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unique Attribute Ranking</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <description>This object is created as part of Lead Prioritization project</description>
    <label>Ranking</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rankings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>Theatre__c</columns>
        <columns>Attribute_Name__c</columns>
        <columns>Attribute_Value__c</columns>
        <columns>Attribute_Ranking__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>